tests/ui/associated-types/defaults-on-trait-object-cycle.stderr
error[E0391]: cycle detected when computing type of `Foo::Assoc`
  --> $DIR/defaults-on-trait-object-cycle.rs:5:5
   |
LL |     type Assoc = Box<dyn Foo>;
   |     ^^^^^^^^^^
   |
   = note: ...which immediately requires computing type of `Foo::Assoc` again
note: cycle used when checking that `Foo` is well-formed
  --> $DIR/defaults-on-trait-object-cycle.rs:3:1
   |
LL | trait Foo {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
